--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,11 @@
-/*          Шрифт підключено      */
-/* ------------------------------ */
-
 body {
   font-family: "Inter", sans-serif;
 }
 
-/* -----------------------------  */
-/* 1.Modern normalize  підключено */
-/* ------------------------------ */
-
-:root {
-  --primary-font: "Inter", sans-serif;
-  --primary-color: #fff;
-}
-
-body {
-  font-family: var(--primary-font);
-}
-
-/* -----------------------------  */
-/* 2. Обнуляємо стили             */
-/* ------------------------------ */
-\*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-
 img {
+  max-width: 100%;
+  height: auto;
   display: block;
-  margin-left: 0;
 }
 
 h1,
@@ -38,35 +14,116 @@ h3,
 h4,
 h5,
 h6,
-p {
-  margin: 0;
-}
+p,
 ul {
   margin: 0;
   padding: 0;
-  list-style-type: none;
 }
 
-/*       задаємо ширину container      */
 .container {
-  max-width: 1310px;
-  border: 2px dashed #2196f3;
+  width: 100%;
+  max-width: 1278px;
+  margin: 0 auto;
   padding: 0 15px;
 }
 
+.section {
+  padding: 80px 0 0;
+}
+
+.section-title {
+  font-size: 24px;
+  line-height: normal;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.section-title--white {
+  color: #fff;
+}
+
+.section-subtitle {
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  max-width: 886px;
+  margin: 80px auto;
+}
+
+.list-none {
+  list-style: none;
+}
+
+/* HEADER */
 .header {
+  position: absolute;
+  left: 0;
+  top: 26px;
+  width: 100%;
+  padding: 19px 0;
+  background: linear-gradient(99deg, rgba(0, 197, 235, 0.3) 0%, rgba(181, 68, 254, 0.3) 100%);
+  backdrop-filter: blur(17.5px);
+  color: #fff;
+}
+.header a {
+  color: inherit;
+  text-decoration: none;
+}
+.header-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  font-size: 28px;
+  line-height: normal;
+}
+.header-menu {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+.header-menu__link {
+  font-size: 12px;
+  line-height: normal;
 }
 
-/*     Задамо Лишці -табіндекс=0, тепер лишка стала интеративна */
-li:focus {
-  background-color: #256563;
+/* Hero */
+.hero {
+  background: #06071b;
+  padding-top: 243px;
+  color: #fff;
 }
 
-.image {
-  width: 200px;
-  height: 400px;
-  background: url(../images/fonBack.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+/* TEAM */
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.team-list__item {
+  flex-basis: calc((100% - 96px) / 4);
+  border-radius: 15px;
+  padding: 14px 12px 12px;
+  background: linear-gradient(318deg, rgba(0, 197, 235, 0.5) 0%, rgba(181, 68, 254, 0.5) 100%), #06071b;
+  backdrop-filter: blur(17.5px);
+  color: #fff;
+  text-align: center;
+}
+.team-list__thumbnail {
+  border-radius: 10px;
+  width: 100%;
+  height: 260px;
+}
+
+.tema-list__title {
+  margin: 20px 0 12px;
+}
+
+/* costumers */
+.costumers-title {
+  margin-bottom: 40px;
 }
